# CafeGLSL

./: .gitignore  README.md  meson.build  ppccross
.github/workflows/: macos.yml
cafecompiler/: CafeGLSLCompiler.h  api.cpp  cafe_glsl_compiler.cpp  cafe_glsl_compiler.h  compile_for_cafe.sh  compile_for_host.sh  compiler_tweaks.txt  exports.def  gx2_definitions.h  main.cpp  meson-cross.sh  meson-toolchain.sh  meson.build  pacman_deps.txt  tests.cpp  tests.h
cafecompiler/libgfd/: gfd.h  gfd_write.cpp
include/: c99_alloca.h
src/amd/drm-shim/: meson.build  radeon_noop_drm_shim.c
src/c11/: threads.h
src/c11/impl/: meson.build  threads_cafe.c
src/compiler/glsl/: gl_nir_link_uniform_blocks.c  gl_nir_link_uniforms.c  gl_nir_lower_buffers.c  gl_nir_lower_samplers_as_deref.c  glsl_parser_extras.cpp  glsl_to_nir.cpp  standalone_scaffolding.cpp
src/compiler/nir/: nir_lower_uniforms_to_ubo.c  nir_lower_wpos_ytransform.c
src/compiler/spirv/: spirv_to_nir.c
src/drm-shim/: device.c  drm_shim.c  drm_shim.h
src/gallium/: meson.build
src/gallium/auxiliary/driver_ddebug/: dd_draw.c
src/gallium/auxiliary/util/: u_async_debug.c  u_log.c
src/gallium/drivers/r600/: r600_asm.c  r600_pipe.c  r600_pipe.h  r600_pipe_common.c  r600_pipe_common.h  r600_shader.c
src/gallium/drivers/r600/sfn/: sfn_assembler.cpp  sfn_instr_tex.cpp  sfn_shader.cpp
src/gallium/winsys/radeon/drm/: radeon_drm_bo.c  radeon_drm_bo.h  radeon_drm_surface.c  radeon_drm_winsys.h
src/gallium/winsys/radeon/drmstub/: meson.build  radeon_drm_winsys.c  radeon_drm_winsys.h
src/mesa/state_tracker/: st_glsl_to_nir.cpp  st_nir_lower_tex_src_plane.c  st_program.c
src/util/: anon_file.c  compiler.h  disk_cache_os.h  log.c  mesa_cache_db.c  os_misc.c  os_mman.h  os_time.c  rwlock.c  rwlock.h  u_debug.c  u_dl.c  u_dl.h  u_math.h  u_qsort.h  u_thread.h
